# modular

./: ILLEGAL_INSTRUCTION_INVESTIGATION.md
max/: CLAUDE.md
max/kernels/src/Mogg/MOGGKernelAPI/: MOGGKernelAPI.mojo
max/kernels/src/Mogg/MambaKernelAPI/: BUILD.bazel  MambaKernelAPI.mojo  __init__.mojo
max/kernels/src/nn/: causal_conv1d.mojo  normalization.mojo  selective_scan.mojo  varlen_causal_conv1d.mojo  varlen_selective_scan.mojo
max/kernels/test/gpu/nn/: test_causal_conv1d.mojo  test_causal_conv1d_update.mojo  test_layer_norm_gated.mojo  test_mamba_split_conv1d_scan_combined.mojo  test_rms_norm_fused_residual.mojo  test_selective_scan.mojo  test_ssd_combined.mojo  test_varlen_causal_conv1d.mojo  test_varlen_selective_scan.mojo
max/kernels/test/nn/: test_causal_conv1d.mojo  test_causal_conv1d_update.mojo  test_layer_norm_gated.mojo  test_mamba_split_conv1d_scan_combined.mojo  test_rms_norm_fused_residual.mojo  test_selective_scan.mojo  test_ssd_combined.mojo  test_varlen_causal_conv1d.mojo  test_varlen_selective_scan.mojo
max/python/max/entrypoints/: BUILD.bazel
max/python/max/nn/: __init__.py  conv.py  linear.py  selective_scan.py
max/python/max/nn/mamba/: __init__.py  mamba.py  ssm_state_cache.py
max/python/max/nn/norm/: __init__.py  fused_norm.py  layer_norm_gated.py
max/python/max/pipelines/architectures/: __init__.py
max/python/max/pipelines/architectures/mamba/: __init__.py  arch.py  data_parallel_mamba.py  distributed_mamba.py  mamba.py  model.py  model_config.py  weight_adapters.py
max/python/max/pipelines/lib/: memory_estimation.py
max/python/max/pipelines/lib/interfaces/: generate.py
max/python/max/pipelines/lib/pipeline_variants/: text_generation.py
max/tests/integration/pipelines/python/: hf-repo-lock.tsv
max/tests/integration/pipelines/python/mamba/: BUILD.bazel  test_mamba_130m.py
max/tests/integration/pipelines/python/nn/: shared_mlp_impl.py  test_mlp.py
max/tests/tests/nn/: BUILD.bazel  test_selective_scan.py
