load("//bazel:api.bzl", "modular_py_test", "requirement")

package(default_visibility = [
    "//:__pkg__",
    "//max/tests:__subpackages__",
    "//open-source/max/max/tests:__subpackages__",
])

# MambaKernelAPI contains selective_scan kernels that need to be available for tests
# MambaKernelAPI is separate from MOGGKernelAPI to avoid conflicts with default kernels
MAMBA_MOJOPKGS = [
    "//max/kernels/src/Mogg/MambaKernelAPI:MambaKernelAPI",
]

modular_py_test(
    name = "nn",
    srcs = glob(["*.py"]),
    deps = [
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/nn",
        requirement("numpy"),
    ],
    mojo_deps = select({
        "//:emit_mojo_enabled": MAMBA_MOJOPKGS,
        "//conditions:default": MAMBA_MOJOPKGS,
    }),
)
